--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
             position: absolute;
             top: 30px;
             left: 30px;
-            text-shadow: 5px 5px 3px #000000;
+            text-shadow: 5px 5px 3px rgba(0, 0, 0, .5);
         }
     </style>
+
+    <meta property="og:title" content="httprawn"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="httprawn is for the birds"/>
+    <meta property="og:url" content="http://www.httprawn.com"/>
+    <meta property="og:image" content="http://www.httprawn.com/prawn.jpg"/>
+
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:domain" content="httprawn.com"/>
+    <meta name="twitter:title" content="httprawn"/>
+    <meta name="twitter:description" content="httprawn is for the birds"/>
+    <meta name="twitter:url" content="http://www.httprawn.com"/>
+    <meta name="twitter:image" content="http://www.httprawn.com/prawn.jpg"/>
 </head>
 
 <body>
